--- a/Marscovery Twitch/MarscoveryTwitch.csproj
+++ b/Marscovery Twitch/MarscoveryTwitch.csproj
@@ -75,7 +75,7 @@
     <Compile Include="Util.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="Ap.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
